# VaultCrypt

./: CMakeLists.txt  CONTRIBUTING.md  README.md  create_files.ps1
include/vaultcrypt/: aead.h  crypto_backend.h  envelope.h  error.h  file_io.h  keystore.h  logger.h  secure_memory.h  version.h
src/cli/: CMakeLists.txt  commands.cpp  commands.h  main.cpp  test_direct.cpp
src/core/: aead_aes_gcm.cpp  aead_chacha20poly1305.cpp  cryptopp_backend.cpp  envelope.cpp  error.cpp  file_io.cpp  keystore.cpp  libsodium_backend.cpp  logger.cpp  secure_memory.cpp
src/crypto/: cryptopp_backend.cpp  libsodium_backend.cpp  openssl_backend.cpp
src/gui/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  main.cpp
src/gui/Theme/: Theme.hpp  ThemeManager.cpp  ThemeManager.hpp
src/keystore/: keystore.cpp
tests/: CMakeLists.txt  integration_test.cpp  test_aead.cpp  test_envelope.cpp  test_keystore.cpp  test_secure_memory.cpp
